# PromptClaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ESCALATIONS.md  GEMINI.md  LICENSE  README.md  TEST_REPORT.md  codex-graceful-degradation-prompt.md  constitution.yaml  prd-cypherclaw-narrative-http-service.md  progress.md  pyproject.toml  rewrite_hook.py  temp_sampler_dispatch.py  test_genai.py  test_proto.py
.promptclaw/: ADP.md  BACKLOG.md  CORE.md  INBOX.md  MEMORY.md  PERSONA.md  ROUTER.md  STATE.json  project_profile.template.json  workspace_registry.json
docs/: 20260402-cypherclaw-embodiment-prd.md  20260402-cypherclaw-embodiment-research-brief.md  architecture.md  build-your-own-promptclaw.md  codex-audio-investigation-brief.md  coherence-api.md  coherence-foundations.md  coherence-rollout-runbook.md  coherence.md  command-reference.md  configuration-reference.md  contact-mic-calibration-protocol.md  cypherclaw-emsd-roadmap.md  cypherclaw-musicianship-roadmap.md  cypherclaw-presence-cadence-spec.md  cypherclaw-sample-directory-layout.md  cypherclaw-sampler-architecture.md  cypherclaw-sampler-artistic-intent.md  cypherclaw-score-tree-composition-spec.md  cypherclaw-tracker-framework.md  cypherclaw-upgrade-checklist.md  deniable-asset-bus-spec.md  example-session.md  handoff-protocol.md  home-visit-playbook.md  live-agent-setup.md  master-plan-20260409.md  pal-product-surface.md  prompt-authoring.md  r750-application-deployment-plan.md  r750-bare-metal-runbook.md  r750-model-evaluation-plan.md  sdp-cli-findings-report.md  sdp-cli-stuck-gemini-report.md  startup-wizard.md  state-and-memory.md  troubleshooting.md
examples/: constitution.json
my-claw/: AGENTS.md  promptclaw.json
pal-2026/: promptclaw.json
promptclaw/: __init__.py  agent_runtime.py  artifacts.py  bootstrap.py  cli.py  command_runner.py  config.py  control_plane.py  diagnostics.py  doctor.py  glyphweave_cli.py  memory.py  models.py  orchestrator.py  pal_agent.py  pal_client.py  pal_deploy.py  pal_knowledge.py  pal_smoke.py  paths.py  prompt_builder.py  router.py  sdp_cost.py  state_store.py  templates.py  ui.py  utils.py  vast_connector.py  wizard.py
sample_manifests/: anthony-library.toml
scripts/: setup_image_api_aws.sh  smoke_narrative.py
sdp/: __init__.py  assumption-log.md  clarification-register.md  cypherclaw-v2-design-statement-2026-05-22.md  domain-model.md  fractal.py  implementation-plan.md  postmortem-narrative-api-engine-mismatch.md  prd-cypherclaw-v2-2026-05-22.md  prd-deniable-asset-bus-2026-05-29.md  prd-pal-2026-agentic-ops-platform.md  prd-snapshot.md  requirements-register.md  run-log.md  self-improvement-prd-2026-05-03.md  task-graph.md
specs/: frac-0001-spec.md  frac-0002-spec.md  frac-0003-spec.md  frac-0004-spec.md  (+249 more)
(+2061 files in other folders)
