[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptclaw"
version = "3.0.0"
description = "An orchestrated multi-agent prompt scaffold with artifact-based handoffs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
cypherclaw = [
    "librosa>=0.10,<1",
    "partitura>=1.8,<2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.5",
    "structlog>=24.1",
]
coherence-pg = ["psycopg2-binary>=2.9", "pgvector>=0.2", "redis>=5.0"]
coherence-full = ["psycopg2-binary>=2.9", "pgvector>=0.2", "redis>=5.0", "pyyaml>=6.0"]
narrative-api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.5",
    "structlog>=24.1",
]
dev = ["mypy>=1.10", "pytest>=8.0", "ruff>=0.9"]

[project.scripts]
promptclaw = "promptclaw.cli:main"
glyphweave = "promptclaw.glyphweave_cli:main"
narrative-api = "cypherclaw.narrative_api.__main__:main"
cypherclaw-midi-intake = "cypherclaw.midi_intake_daemon:main"
cypherclaw-live-midi-emitter = "cypherclaw.live_midi_emitter:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["promptclaw*", "cypherclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
